--- a/Website/src/index.css
+++ b/Website/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	scroll-behavior: smooth;
+}
+
 html,
 body {
 	@apply tracking-tighter bg-black;
@@ -24,9 +28,9 @@ body {
 
 @layer base {
 	main {
-		@apply relative bg-white sm:px-4 lg:px-0;
+		@apply relative min-h-screen px-4 bg-white;
 	}
-	content {
+	article {
 		@apply max-w-screen-lg mx-auto;
 	}
 	button {
@@ -62,5 +66,9 @@ body {
 	}
 	strong {
 		@apply font-medium;
+	}
+	.text-h2 {
+		@apply font-normal leading-snug text-gray-600 lg:text-4xl md:text-3xl sm:text-lg;
+		text-wrap: pretty;
 	}
 }
